--- a/LinkedViewProject/app/src/main/AndroidManifest.xml
+++ b/LinkedViewProject/app/src/main/AndroidManifest.xml
@@ -5,13 +5,17 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <application android:allowBackup="true"  android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:theme="@style/AppTheme">
-        <activity android:label="@string/app_name" android:name="mmu.tom.linkedviewproject.MainActivity">
+        <activity android:label="@string/app_name" android:name="mmu.tom.linkedviewproject.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name="mmu.tom.linkedviewproject.DeviceDetailsActivity" android:label="@string/app_name" android:parentActivityName="mmu.tom.linkedviewproject.MainActivity" >
+            <meta-data android:name="android.support.PARENT_ACTIVITY" android:value="mmu.tom.linkedviewproject.DeviceDetailsActivity" />
+        </activity>
+
     </application>
 
 </manifest>
